Done: Add PUT and DELETE routes to your API. Verify in MongoDB that these work as intended. Add validation to your routes
