# swagger-output.json
@@ -5,7 +5,7 @@
 		"description": "Contacts API Documentation",
 		"version": "1.0.1"
 	},
-	"host": "diagnosis-api-gk2d.onrender.com",
+	"host": "localhost:5500",
 	"basePath": "/",
 	"schemes": ["https"],
 	"paths": {
@@ -63,14 +63,20 @@
 					}
 				],
 				"responses": {
+					"201": {
+						"description": "Created"
+					},
+					"400": {
+						"description": "Bad Request"
+					},
 					"500": {
 						"description": "Internal Server Error"
 					}
 				}
 			}
 		},
-		"/dg/{id}": {
-			"put": {
+		"/dg/update/{id}": {
+			"get": {
 				"description": "",
 				"parameters": [
 					{
@@ -81,11 +87,68 @@
 					}
 				],
 				"responses": {
-					"501": {
-						"description": "Not Implemented"
+					"404": {
+						"description": "Not Found"
 					}
 				}
 			},
+			"put": {
+				"description": "",
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"required": true,
+						"type": "string"
+					},
+					{
+						"name": "body",
+						"in": "body",
+						"schema": {
+							"type": "object",
+							"properties": {
+								"diagnosis": {
+									"example": "any"
+								},
+								"type": {
+									"example": "any"
+								},
+								"overview": {
+									"example": "any"
+								},
+								"symptoms": {
+									"example": "any"
+								},
+								"treatments": {
+									"example": "any"
+								},
+								"specialists": {
+									"example": "any"
+								},
+								"contagiousMethod": {
+									"example": "any"
+								}
+							}
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					},
+					"404": {
+						"description": "Not Found"
+					},
+					"500": {
+						"description": "Internal Server Error"
+					}
+				}
+			}
+		},
+		"/dg/delete/{id}": {
 			"delete": {
 				"description": "",
 				"parameters": [
@@ -97,11 +160,29 @@
 					}
 				],
 				"responses": {
-					"501": {
-						"description": "Not Implemented"
+					"200": {
+						"description": "OK"
+					},
+					"404": {
+						"description": "Not Found"
+					},
+					"500": {
+						"description": "Internal Server Error"
 					}
 				}
-			},
+			}
+		},
+		"/getalldg": {
+			"get": {
+				"description": "",
+				"responses": {
+					"200": {
+						"description": "OK"
+					}
+				}
+			}
+		},
+		"/dg/{id}": {
 			"get": {
 				"description": "",
 				"parameters": [
@@ -118,16 +199,6 @@
 					},
 					"404": {
 						"description": "Not Found"
-					}
-				}
-			}
-		},
-		"/getalldg": {
-			"get": {
-				"description": "",
-				"responses": {
-					"200": {
-						"description": "OK"
 					}
 				}
 			}
